# translator

./: pyproject.toml  requirements.txt
markdown_translator/: chunker.py  cli.py  formatter.py  protector.py  translator.py
tests/: Start Here_ko.md
