[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown-translator"
version = "0.1.0"
description = "Markdown translation tool"
authors = [
    {name = "birdblues", email = "birdblues@mac.com"},
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.25",
    "langchain-core==0.3.65",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.45",
    "markdown-it-py==3.0.0",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "orjson==3.10.18",
    "packaging==24.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "urllib3==2.4.0",
    "zstandard==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["markdown_translator"] 

[project.scripts]
mdt = "markdown_translator.cli:main"
